--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "moment": "^2.26.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.2.0",
